--- a/html/index.html
+++ b/html/index.html
@@ -9,15 +9,22 @@
         a{
             text-decoration: none
         }
+
+        .pad-bt02{
+            padding-bottom: 10px
+        }
     </style>
 </head>
 <body>
     <header>
         <h1> Exercícios HTML </h1>
     </header>
-    <nav>
+    <nav class="pad-bt02">
         <a href="exercicios/texto1.html"> Texto1 - 01 </a> |
         <a href="exercicios/texto2.html"> Texto2 - 02 </a> |
+        <a href="exercicios/lista.html"> Lista1 - 03 </a> |
+        <a href="exercicios/listaAninhada.html"> Lista2 - 04 </a> |
+        <a href="exercicios/link1.html"> Link - 05 </a> |
     </nav>
     <section id="conteudo">  </section>
     <script>
