--- a/html/exercicios/listaAninhada.html
+++ b/html/exercicios/listaAninhada.html
@@ -2,7 +2,7 @@
 
 <ul class="tree" >
     <li>
-    <span > backend </span>
+    <span wm-element> backend </span>
         <ul >
             <li>
             <span wm-element> app </span>
@@ -35,7 +35,11 @@
             </li>
         </ul>
     </li>
-</ul>
+</ul> <br> <br>
+
+<a href="exercicios/listaAninhada.html"> Modo relativo </a><br>
+<a href="/index.html"> Modo servidor </a>
+
 
 <link rel="stylesheet" href="http://files.cod3r.com.br/curso-web/tree.css">
 
