--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,7 @@
         <a href="exercicios/lista.html"> Lista1 - 03 </a> |
         <a href="exercicios/listaAninhada.html"> Lista2 - 04 </a> |
         <a href="exercicios/link1.html"> Link - 05 </a> |
+        <a href="exercicios/tabela.html"> Tabela - 06 </a> |
     </nav>
     <section id="conteudo">  </section>
     <script>
