--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,8 @@
         <a href="exercicios/listaAninhada.html"> Lista2 - 04 </a> |
         <a href="exercicios/link1.html"> Link - 05 </a> |
         <a href="exercicios/tabela.html"> Tabela - 06 </a> |
+        <a href="exercicios/form/form.html"> Formulário - 07 </a> |
+        
     </nav>
     <section id="conteudo">  </section>
     <script>
