--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,8 @@
         <a href="exercicios/link1.html"> Link - 05 </a> |
         <a href="exercicios/tabela.html"> Tabela - 06 </a> |
         <a href="exercicios/form/form.html"> Formulário - 07 </a> |
+        <a href="exercicios/imagens.html"> Imagens - 08 </a> |
+        <a href="exercicios/slider.html"> Slider - 09 </a> |
         
     </nav>
     <section id="conteudo">  </section>
