--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,7 @@
         <a href="exercicios/form/form.html"> Formulário - 07 </a> |
         <a href="exercicios/imagens.html"> Imagens - 08 </a> |
         <a href="exercicios/slider.html"> Slider - 09 </a> |
+        <a href="exercicios/tagsNaoVisuais.html"> Tags Não Visuais - 10 </a> |
         
     </nav>
     <section id="conteudo">  </section>
