--- a/css/classeTag.html
+++ b/css/classeTag.html
@@ -17,6 +17,7 @@
         <ul class='tag'>6</ul>
         <ol class='tag'>7</ol>
         <form class='tag'>8</form>
+        <nova class="tag">9</nova>
     </div>
     <script src="js/tag.js"></script>
 </body>
