--- a/css/anatomia.html
+++ b/css/anatomia.html
@@ -5,7 +5,32 @@
     <meta charset="UTF-8">
     <title>Anatomia CSS</title>
     <style>
-        /* ... */
+        
+        .selector {
+            color: white;
+            font-size: 30px;
+            text-align: center;
+
+            /* multiplos valores */
+            border: solid 5px navy;
+            font-family: Arial, Helvetica, sans-serif;
+            
+            /* funções */
+            width: calc( 100% - 900px );
+            background-color: rgb( 50, 120, 150 );
+        }
+
+        .selector:hover {
+            background-color: orangered;
+        }
+
+        .selector::first-letter {
+            font-size: 60px;
+            text-shadow: 3px 3px 5px black;
+            font-weight: bold;
+            letter-spacing: 5px
+        }
+
     </style>
 </head>
 
