--- a/css/especificidade1.html
+++ b/css/especificidade1.html
@@ -6,6 +6,14 @@
     <title>Especificidade CSS</title>
     <style>
         /* https://developer.mozilla.org/pt-BR/docs/Web/CSS/Specificity */
+        /* 
+            Ordem de processamento CSS
+
+            1. regra com !important
+            2. Quanto mais especifico for a localidade do elemento, mais valor ele terá
+            3. em caso de valores iguais, o último processado ganha
+        */
+
     </style>
 </head>
 
