--- a/css/especificidade1.html
+++ b/css/especificidade1.html
@@ -76,7 +76,7 @@
 </head>
 
 <body>
-    <p class='observacao'> Com especificação. </p>
+    <p class='observacao'> Com especificidade. </p>
     <div class="importante"> Com important. </div>
     <ol class="ordem"> Com ordem. </ol>
 </body>
