--- a/css/margin.html
+++ b/css/margin.html
@@ -16,6 +16,7 @@
 
         .m30 {
             margin: 30px;
+            
         }
 
 
@@ -28,7 +29,7 @@
         }
 
         /* 
-            float: left / right
+            float: left
             position: absolute
             display: inline-block
         */
@@ -36,7 +37,7 @@
 </head>
 
 <body>
-    <div class="m30">Conteúdo 1</div>
+    <div class="m30 f">Conteúdo 1</div>
     <div class="m30" style="border: none"></div>
     <div class="m30">Conteúdo 2</div>
     <div class="mb30">Conteúdo 3</div>
