--- a/css/tamanhoBox.html
+++ b/css/tamanhoBox.html
@@ -4,14 +4,37 @@
     <meta charset="UTF-8">
     <title>Tamanho Box</title>
     <style>
+
+        h2 {
+            color: rgb(48, 48, 48);
+            width: 600px;
+            font-weight: bold;
+            font-family:  Arial, Helvetica, sans-serif;
+            font-size: 20px;
+        }
         body {
             font-size: 45px;
+            margin: 0;
         }
+        div { 
+            background-color: aquamarine;
+            width: 100%;
+            border-right: solid 10px black;
+
+            box-sizing: border-box;
+        }
+
     </style>
 </head>
 <body>
     <div>
         O tamanho do Box é...
     </div>
+    <h2> 
+        Por padrão, box-sizing é content-box. o calculo em porcentagem de tamanho dos elementos
+        será relativo ao CONTEUDO.
+        <br> <br>
+        Quando border-box é setado, o valor será relativo a BORDA do elemento
+    </h2>
 </body>
 </html>
