--- a/css/cores.html
+++ b/css/cores.html
@@ -11,6 +11,19 @@
             https://coolors.co/
             http://paletton.com/
         */
+        body {
+            background-color: greenyellow; /* Valor definido */
+
+            background-color: #ff22aa; /* hexadecimal( # vermelho verde azul - # ff 22 aa ) */
+            background-color: #f2a; /* hexadecimal simplificado ( quando repete os blocos ) */
+            background-color: #ff22aabb; /* hexadecimal com transparência ( # vermelho verde azul transparência - # ff 22 aa bb ) */
+
+            background-color: rgb(100, 100, 200); /* rgb( vermelho, verde, azul ) */
+            background-color: rgba(100, 100, 200, 0.5); /* rgb com transparência ( rgba( vermelho, verde, azul, transparência ) ) */
+            
+            background-color: hsl(246, 100%, 50%); /* hsl( cor, saturação %, luz % ) */
+            background-color: hsla(246, 100%, 50%, 0.5); /* hsl com transparência ( hsla( cor, saturação %, luz %, transparência ) ) */
+        }
     </style>
 </head>
 
