--- a/css/flexbox1.html
+++ b/css/flexbox1.html
@@ -11,17 +11,17 @@
 </head>
 
 <body>
-    <div class="flex-container tag nolabel">
-        <div class="tag nolabel">1</div>
-        <div class="tag nolabel">2</div>
-        <div class="tag nolabel big">3</div>
-        <div class="tag nolabel">4</div>
-        <div class="tag nolabel">5</div>
-        <div class="tag nolabel">6</div>
-        <div class="tag nolabel">7</div>
-        <div class="tag nolabel">8</div>
-        <div class="tag nolabel">9</div>
-        <div class="tag nolabel">10</div>
+    <div class="flex-container tag no-label">
+        <div class="tag no-label">1</div>
+        <div class="tag no-label">2</div>
+        <div class="tag no-label big">3</div>
+        <div class="tag no-label">4</div>
+        <div class="tag no-label">5</div>
+        <div class="tag no-label">6</div>
+        <div class="tag no-label">7</div>
+        <div class="tag no-label">8</div>
+        <div class="tag no-label">9</div>
+        <div class="tag no-label">10</div>
     </div>
     <script src="js/tag.js"></script>
 </body>
