--- a/css/texto.html
+++ b/css/texto.html
@@ -16,6 +16,59 @@
             flex-direction: column;
             align-items: center;
         }
+        
+
+        p {
+        
+        /* Valores padrões */
+            font-size: 1em;
+            font-size: 100%;
+            font-size: 16px;
+            font-size: 12pt;
+
+        /* Unidades absolutas */
+            font-size:  100px;
+            font-size: 72pt; /* pontos */
+            font-size: 1in; /* polegada */
+
+        /* Unidades relativas */
+            font-size: 2.2em; /* relativo ao elemento pai */
+            font-size: 2.2rem; /* relativo ao elemento html ou raiz */
+            font-size: 50vh; /* relativo ao heigth dividido por 100 */
+            font-size: 10vw; /* relativo ao width dividido por 100 */
+
+            font-family: 'Indie Flower', Arial, Helvetica, sans-serif;
+
+            font-weight: 500;
+            font-weight: bold;
+            text-transform: uppercase;
+            /* text-decoration: overline underline line-through  */
+
+            word-spacing: 50px;
+            letter-spacing: 20px;
+            line-height: 2.0em;
+            text-align: center
+        } 
+
+
+        .botao {
+            text-decoration: none;
+            border-radius: 20px;
+            padding: 10px;
+            font-size: 1.5em;
+        }
+
+        .destaque {
+            color: black;
+            background-color: chartreuse;
+            box-shadow: 2px 2px 5px black;
+            border: solid 2px black;
+        }
+
+        .botao:active {
+            box-shadow: none;
+        }
+
     </style>
 </head>
 
