--- a/css/cssgrid1.html
+++ b/css/cssgrid1.html
@@ -24,7 +24,8 @@
 
         .css-grid {
           display:grid;
-          grid-template-columns: 33.33% 33.33% 33.33%;
+          grid-template-columns: 200px auto auto  ;
+          
          
         }
 
