--- a/debugger.html
+++ b/debugger.html
@@ -1,36 +1,12 @@
-<div class="css-grid">
-
-  <div class="item1"></div>
-  <div class="item2"></div>
-  <div class="item3"></div>
-  <div class="item4"></div>
-</div>
-
-<style>
-
-  .item1 { grid-area: nav; }
-  .item2 { grid-area: menu; }
-  .item3 { grid-area: content; }
-  .item3 
-
-  html, body {
-    height: 100%;
-  }
-
-  .css-grid {
-    display: grid;
-    grid-template-columns: 50px 600px;
-  }
-
-  .css-grid {
-    grid-template-areas: 
-    'nav nav nav nav nav'
-    'menu menu content content content';
-
-  }
-
-  .css-grid div {
-    border: solid 2px black;
-    background-color: cyan;
-  }
-</style>
+<img class="passaro" src="./imgs/passaro.png" alt="passaro">
+    <div class="par-de-barreiras">
+      <div class="barreira">
+        <div class="corpo"></div>
+        <div class="borda"></div>
+      </div>
+      <div class="barreira">
+        <div class="borda"></div>
+        <div class="corpo"></div>
+      </div>
+    </div>
+    <div class="progresso">100</div>
