--- a/dom/trabalhandoComEventos4.html
+++ b/dom/trabalhandoComEventos4.html
@@ -27,10 +27,24 @@
         <select name="hl">
                 <option value="pt-br">Português (Brasil)</option>
                 <option value="en-us">Inglês (Americano)</option>
+                <option >None</option>
             </select>
         <button wm-submit>Pesquisar</button>
     </form>
     <script>
-        // ...
+        const submit = document.querySelector('[wm-submit]')
+        submit.onclick = (e) => {
+          e.preventDefault()
+
+          const form = e.target.parentNode
+          const formData = new FormData(form)
+          formData.append('ajax', true)
+          console.log(formData.get('q'))
+          console.log(formData.has('hl'))
+
+          for (let dado of formData) {
+            console.log(dado)
+          }
+        }
     </script>
 </body>
