--- a/debugger.html
+++ b/debugger.html
@@ -1,100 +1,6 @@
-<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-<body>
-  <div class="flex">
-    <div class="display">
-      <div class="values">88</div>
-    </div>  
-    <div class="content-area grid-area flex-items ">
-      <div class="item item-1">1</div>
-      <div class="item item-2">2</div>
-      <div class="item item-3">3</div>
-      <div class="item item-4">4</div>
-      <div class="item item-5">5</div>
-      <div class="item item-6">6</div>
-      <div class="item item-7">7</div>
-      <div class="item item-8">8</div>
-      <div class="item item-9">9</div>
-      <div class="item item-9">0</div>
-      <div class="item item-*">*</div>
-      <div class="item item--">-</div>
-      <div class="item item-+">+</div>
-      <div class="item item-/">/</div>
-      <div class="item item-=">=</div>
-      
-    </div>
-  </div>
-</body>
-
-<style>
-
-* {
-  font: 1.2em 'Rubik';
-  box-sizing: border-box;
-}
-.flex-items {
-  justify-content: space-around;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-body, html {
-  height: 100%;
-}
-.flex {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.content-area {
-  height: 275px;
-  width: 220px;
-  background-color: aquamarine;
-  border: 2px solid black;
-  
-}
-.grid-area {
-  display: grid;
-  grid-template-columns: 40px 40px 40px;
-}
-
-.item {
-  border: 2px solid black;
-}
-
-.display {
-  border-top: 2px solid black;
-  border-right: 2px solid black; 
-  border-left: 2px solid black;
-
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-
-  background-color: #aaa;
-}
-.display {
-  padding: 10px;
-  width: 220px;
-  height: 80px;
-}
-
-.display .values {
-  display: flex;
-  padding-right: 5px;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  color: antiquewhite;
-  
-}
-</style>
-
+<form name="" action="" method="get">
+  <input type="date" name="trabson" id="">
+</form>
 <script>
-document.querySelectorAll('.item').forEach(item =>{
-  item.draggable = true
-})
+  console.log(document.trabson)
 </script>
