--- a/ajax/axios2.html
+++ b/ajax/axios2.html
@@ -14,6 +14,20 @@
     <div id="post"></div>
 
     <script>
-        // ...
+        function exibirResultados(id, dados) {
+          const texto = JSON.stringify(dados)
+          document.getElementById(id).innerHTML = texto
+        }
+
+        axios('parOuImpar', {
+          params: {
+            numero: 12
+          }
+        }).then(resp => exibirResultados('get', resp.data))
+
+        axios.post('formulario', {
+          nome: 'Lucas',
+          idade: 24
+        }).then(resp => exibirResultados('post', resp.data))
     </script>
 </body>
