--- a/ajax/jqueryAjax.html
+++ b/ajax/jqueryAjax.html
@@ -14,6 +14,36 @@
     <div id="post"></div>
 
     <script>
-        // ...
+        function exibirResultado(id, dados) {
+          const texto = JSON.stringify(dados)
+          document.getElementById(id).innerHTML = texto
+        }
+
+        
+        $.ajax({
+          url: 'parOuImpar',
+          method:'get',
+          data: {
+            numero: 8
+          },
+          success(resposta) {
+            exibirResultado('get', resposta)
+          },
+          error(e) {
+            exibirResultado('get', e)
+          }
+        })
+
+       $.ajax({
+         url: 'formulario',
+         method: 'post',
+         data: {
+           nome: 'Lucas',
+           sobrenome: 'Humberto'
+         },
+         success(resposta) {
+           exibirResultado('post', resposta)
+         }
+       }) 
     </script>
 </body>
