--- a/debugger.html
+++ b/debugger.html
@@ -1,6 +1,10 @@
-<form name="" action="" method="get">
-  <input type="date" name="trabson" id="">
-</form>
-<script>
-  console.log(document.trabson)
-</script>
+<p>P</p>
+<span>Span</span> <span>Span</span>
+<div>Div</div>
+<style>
+span {
+  display: inline;
+  width: 80px;
+  
+}
+</style>
